@@ -127,6 +127,7 @@ namespace enigma2
     const std::string& GetMapRytecTextGenresFile() const { return m_mapRytecTextGenresFile; }
     bool GetLogMissingGenreMappings() const { return m_logMissingGenreMappings; }
     int GetEPGDelayPerChannelDelay() const { return m_epgDelayPerChannel; }
+    bool SkipInitialEpgLoad() const { return m_skipInitialEpgLoad; }
 
     //Recordings
     const std::string& GetRecordingPath() const { return m_recordingPath; }
@@ -252,6 +253,7 @@ namespace enigma2
     std::string m_mapRytecTextGenresFile;
     bool m_logMissingGenreMappings = true;
     int m_epgDelayPerChannel;
+    bool m_skipInitialEpgLoad = true;
 
     //Recordings
     std::string m_recordingPath = "";
